@@ -1,3 +1,13 @@
+2004/05/16 11:25 (-0400) muppetman
+
+	* GObject.xs: disable stash caching.  this fixes a few bizarre
+	things that go wrong when using perl threads; different threads
+	have separate copies of the stashes, but the caching kept only
+	one copy, which had a tendency to be incorrect in at least one
+	thread.  to avoid an ABI break, we just look up the stash in
+	gperl_object_stash_from_type() every time, and save a pointer
+	on every registered object class.
+
 2004/05/16 01:44 (-0400) muppetman
 
 	* GObject.xs: add missing Glib::Object::notify().
